# aqua_qe_lkdf

./: .gitignore  README-pt.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
ai_engine/ambiguity_engine/: analyzer.py  detector.py  models.py  resolver.py
ai_engine/gateway/: gateway.py
ai_engine/knowledge/: facade.py  models.py
ai_engine/knowledge/learning/: engine.py
ai_engine/knowledge/memory/: store.py
ai_engine/requirement_agent/: agent.py
ai_engine/scenario_agent/: agent.py  pipeline.py
backend/: __init__.py
backend/api/: routes.py  routes_cicd.py  routes_compliance.py  routes_graph.py  routes_knowledge.py  routes_observability.py  routes_phase2.py  routes_rag.py  routes_security.py  routes_sessions.py
backend/engines/: advanced.py  compliance_engine.py
backend/gateway/: cicd.py  config_manager.py  core.py  graph_db.py  knowledge.py  observability.py  prompt_manager.py  rag.py  security.py  session_manager.py
backend/models/: schemas.py
backend/providers/: adapters.py  registry.py
config/: .gitignore  gateway.json  graph.db  knowledge.db  sessions.db
frontend/: aqua-qe-roadmap.html  aqua-qe-story-engineering.html  aqua-qe-workbench.html  aqua-qe.html  engines-panel.html  gateway-panel.html  knowledge-explorer.html  next.config.js  observability.html  package.json  tailwind.config.ts
infrastructure/: Dockerfile.runtime  docker-compose.yml
runtime-core/: api.py  cli.py
runtime-core/adapters/: factory.py
runtime-core/context_engine/: engine.py
runtime-core/evidence_engine/: collector.py
runtime-core/execution_engine/: engine.py
runtime-core/pom_layer/: registry.py
runtime-core/quality_policy/: engine.py  evaluators.py
runtime-core/scenario_engine/: engine.py
runtime-core/semantic_engine/: intent_resolver.py
runtime-core/story_lifecycle/: diff_engine.py
runtime_core/: api.py
runtime_core/adapters/: base.py  factory.py
runtime_core/assertion_engine/: assertions.py
runtime_core/evidence_engine/: collector.py
runtime_core/parser/: dsl_parser.py
runtime_core/pipeline/: fanout.py
runtime_core/quality_policy/: models.py
runtime_core/runtime-core/: api.py  cli.py
runtime_core/story_lifecycle/: models.py
shared/: models.py
tests/acceptance/: test_dsl_parser.py  test_intent_resolver.py
tests/integration/: test_execution_pipeline.py
tests/unit/: test_accessibility.py  test_ambiguity_engine.py  test_api_adapter.py  test_cypress_selenium.py  test_dsl_parser.py  test_knowledge_layer.py  test_mvp2_core.py  test_new_engines.py  test_playwright_adapter.py  test_quality_policy.py  test_scenario_agent.py  test_story_lifecycle.py
(+48 files in other folders)
