[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lkdf-runtime"
version = "1.1.0"
description = "AQuA-QE LKDF — Layered Keyword-Driven Framework Runtime Core"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.25",
    "qdrant-client>=1.9",
    "sentence-transformers>=2.7",
]
robot = [
    "robotframework>=6.1",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
lkdf = "runtime_core.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
