[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "aqua-qe-lkdf"
version         = "1.4.0"
description     = "AQuA-QE LKDF v1.4 — Layered Keyword-Driven Framework"
readme          = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "anthropic>=0.28.0",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

full = [
    "openai>=1.30.0",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.0",
    "robotframework>=7.0.0",
]

[project.scripts]
lkdf = "runtime_core.cli:app"

[tool.setuptools.packages.find]
where   = ["."]
include = ["shared", "shared.*", "runtime_core", "runtime_core.*", "ai_engine", "ai_engine.*"]
exclude = ["tests*", "frontend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["shared", "runtime_core", "ai_engine"]
omit   = ["tests/*", "frontend/*", "*/migrations/*"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
